<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <!-- Nombre -->
    <TextView
        android:id="@+id/textNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textStyle="bold" />

    <!-- Apellido -->
    <TextView
        android:id="@+id/textApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apellido"
        android:textStyle="bold" />

    <!-- Dirección -->
    <TextView
        android:id="@+id/textDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direcci_n" />

    <!-- Edad -->
    <TextView
        android:id="@+id/textEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edad" />

    <!-- Celular -->
    <TextView
        android:id="@+id/textCelular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/celular" />

    <!-- Fecha -->
    <TextView
        android:id="@+id/textFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha" />

    <!-- Activo -->
    <TextView
        android:id="@+id/textActivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Activo:"
        tools:ignore="HardcodedText" />

    <!-- Botones -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Botón para borrar -->
        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/borrar"
            style="?android:attr/buttonBarButtonStyle" />

        <!-- Botón para editar -->
        <Button
            android:id="@+id/btnEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Editar"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="HardcodedText" />

        <!-- Botón para visualizar -->
        <Button
            android:id="@+id/btnVisualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visualizar"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <ListView
        android:id="@+id/listViewDatos"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>